--- a/TourGuide/build.gradle
+++ b/TourGuide/build.gradle
@@ -56,6 +56,17 @@ jacocoTestReport {
         xml.enabled true
         csv.enabled false
         html.destination file("${buildDir}/jacocoHtml")
+//        exclude = ["com/estbnsvl/tourGuide/dto/***"]
+    }
+    afterEvaluate {
+        classDirectories = files(classDirectories.files.collect {
+            fileTree(dir: it,
+                    exclude: ['com/estbnsvl/tourGuide/dto/**',
+                              'com/estbnsvl/tourGuide/configuration/**',
+                              'com/estbnsvl/tourGuide/init/**',
+                              'com/estbnsvl/tourGuide/model/**'
+                    ])
+        })
     }
 }
 
